# veris-memory-mcp-server

./: .coverage  .env.example  .env.sprint13.example  .pre-commit-config.yaml  CODE_QUALITY_IMPROVEMENT_PLAN.md  IMPLEMENTATION_PLAN.md  PHASE_3_PLAN.md  QUALITY_IMPROVEMENT_SUMMARY.md  README.md  coverage.xml  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml  claude-code-review.yml  quality.yml
docs/: CONTRIBUTING.md  SPRINT_13_SETUP.md
examples/: basic_usage.py  claude_cli_integration.md  config.json.example
src/veris_memory_mcp_server/: __init__.py  __main__.py  main.py  server.py
src/veris_memory_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/veris_memory_mcp_server/analytics/: __init__.py  collector.py  engine.py  tools.py
src/veris_memory_mcp_server/client/: __init__.py  veris_client.py
src/veris_memory_mcp_server/config/: __init__.py  settings.py
src/veris_memory_mcp_server/protocol/: __init__.py  handlers.py  schemas.py  transport.py
src/veris_memory_mcp_server/streaming/: __init__.py  engine.py  tools.py
src/veris_memory_mcp_server/tools/: __init__.py  base.py  delete_context.py  forget_context.py  get_agent_state.py  get_user_facts.py  list_context_types.py  query_graph.py  retrieve_context.py  search_context.py  store_context.py  update_scratchpad.py  upsert_fact.py
src/veris_memory_mcp_server/utils/: __init__.py  cache.py  health.py  logging.py
src/veris_memory_mcp_server/webhooks/: __init__.py  delivery.py  events.py  manager.py  tools.py
tests/: conftest.py
tests/unit/: test_protocol.py  test_tools.py
